hphp/hack/test/typecheck/expression_trees/nesting/vars/simple_error.php.exp
ERROR: File "simple_error.php", line 6, characters 31-51:
Typing error (Typing[4110])
  File "expr_tree.php", line 413, characters 26-35:
  Expected `int`
  File "expr_tree.php", line 107, characters 40-45:
  But got `string`
ERROR: File "simple_error.php", line 7, characters 30-50:
Typing error (Typing[4323])
  File "expr_tree.php", line 126, characters 40-40:
  `T` is a constrained type parameter
  File "expr_tree.php", line 126, characters 45-62:
  This type constraint is violated
  File "expr_tree.php", line 126, characters 45-62:
  Expected `ExampleMixedOpType`
  File "expr_tree.php", line 98, characters 39-41:
  But got `int`
ERROR: File "simple_error.php", line 7, characters 43-48:
Was expecting an object but type is unknown (Typing[4297])
  File "simple_error.php", line 7, characters 43-44:
  It is unknown because a type could not be determined here
